--- a/methods/911.md
+++ b/methods/911.md
@@ -15,6 +15,9 @@ During the recent attacks, the FBI has taken additional measures to hinder emerg
 
 The CIA has began installing permanent towers that provide cellular and data coverage for properties they own or control.  The tower shown above is at Phoenix House at 1296 Murphy Ave, Atlanta, Georgia.
 
+![IMG_20240503_173316659~2](https://github.com/TAGIsNoGame/TAG/assets/159488374/d689f33e-fa65-45c1-8c7e-c6e04c6e2e3c)
+This tower is a true cell used by true mobile network operators. You can see the real tower (in previous picture) in the background--that's used to divert emergency calls.
+
 The permanent towers are activated for short periods of time whenever they deem it necessary to block access to 911 or other voice calls. These permanent towers have  backhaul capabilities and are able to provide 4G/5G Internet access although like voice calls routing and network availability is up to the operator. 
 
 ## Example Covert COWs
