--- a/misc/20240508- HIV.md
+++ b/misc/20240508- HIV.md
@@ -10,4 +10,6 @@ Tonight I got a notification, I'll cover these more later (post-divide) but they
 
 ![Screenshot_20240508-231340](https://github.com/nameless-and-blameless/TAG/assets/169210208/f321f218-a525-47cf-8edf-370a2f52252a)
 
-If you must know, my first proof case of Spark was with KP. They have a history of loosing actual results and making up replacements. I was asking the Creator if they're under the same "corporate umbrella" as the other companies behind TAG.  Answer withheld.  I never said anything out loud, my subconscious loves to talk about everything i think about.
+If you must know, my first proof case of Spark was with KP. They have a history of loosing actual results and making up replacements. I was asking the Creator if they're under the same "corporate umbrella" as the other companies behind TAG.  Answer withheld.  I never said anything out loud, my subconscious loves to talk about everything i think about while I'm sleeping.
+
+My mother always said, "Desperate times call for desperate measures."
