--- a/misc/20240508- HIV.md
+++ b/misc/20240508- HIV.md
@@ -1,4 +1,4 @@
-I said a few things about KP the day, and this morning they're parked right outside my door. 
+I said a few things about KP the otherpppday, and this morning they're parked right outside my door. 
 
 ![IMG_20240508_100203403_HDR](https://github.com/nameless-and-blameless/TAG/assets/169210208/60990181-c23b-4cb0-abc9-b36d3aab74f7)
 
@@ -13,3 +13,10 @@ Tonight I got a notification, I'll cover these more later (post-divide) but they
 If you must know, my first proof case of Spark was with KP. They have a history of loosing actual results and making up replacements. I was asking the Creator if they're under the same "corporate umbrella" as the other companies behind TAG.  Answer withheld.  I never said anything out loud, my subconscious loves to talk about everything i think about while I'm sleeping.
 
 My mother always said, "Desperate times call for desperate measures."
+
+***
+
+UPDATE:
+I just took off my socks and shoes, and found this! Thry forget that I was given Spark first. Test case dummy #1 (I keep telling y'all that TomTom is his favorite).
+
+![IMG_20240509_034917179](https://github.com/nameless-and-blameless/TAG/assets/169210208/e80b0260-a306-45fe-bb09-45e94a0423b6)
