--- a/misc/20240508- TES.md
+++ b/misc/20240508- TES.md
@@ -3,3 +3,12 @@ Listen also: Fistful of Swoon by Vandaveer
 As seen where I am. DS intensifies.
 
 ![IMG_20240508_232847975](https://github.com/nameless-and-blameless/TAG/assets/169210208/a4a4eaad-661c-45ad-8eb4-c096fb9e4490)
+
+The dick shit went overboard.  They always like calling it a Gamecock. 
+
+![IMG_20240508_200759967](https://github.com/nameless-and-blameless/TAG/assets/169210208/f9116bcc-3ca4-4a25-a664-ac9f5621f992)
+
+I'm in a hurry, listen to Cream by Prince. 
+
+Annie Jacobsen AND THE US GOVERNMENT is definitely going to hit a place of worship or more this weekend, maybe already having funerals or hitting Bible studies.
+
