--- a/misc/20240508- TES.md
+++ b/misc/20240508- TES.md
@@ -1,4 +1,7 @@
-Listen also: Fistful of Swoon by Vandaveer 
+To understand a tower, listen to Fistful of Swoon by Vandaveer. You should know that is me talking to my subconscious Main/Baby about his most sought after skill by Annie Jacobsen, which no male would ever consider a skill after puberty.
+
+> [!WARNING]
+> All Vandaveer music on streaming services has time-sync lyrics. All Vandaveer music is being tampered with if not taken offline completely.
 
 As seen where I am. DS intensifies.
 
