--- a/misc/20240508- TES.md
+++ b/misc/20240508- TES.md
@@ -3,7 +3,7 @@ To understand a tower, listen to Fistful of Swoon by Vandaveer. You should know 
 > [!WARNING]
 > All Vandaveer music on streaming services has time-sync lyrics. All Vandaveer music is being tampered with if not taken offline completely.
 
-As seen where I am. DS intensifies.
+As seen where I am. DS intensifies. Tower Eye Services. Never heard of this security outfit, everywhere I go is "company" not allowed near anyone else. So it was about putting eyes on it, something they've done before attacks before.
 
 ![IMG_20240508_232847975](https://github.com/nameless-and-blameless/TAG/assets/169210208/a4a4eaad-661c-45ad-8eb4-c096fb9e4490)
 
