--- a/report_drafts/20240630.md
+++ b/report_drafts/20240630.md
@@ -1,12 +1,12 @@
-# June 30, 2023 TAG-POW Attacks on Chattanooga Churches
+# June 30, 2024 TAG-POW Attacks on Chattanooga Churches
 
-#### Affiliated Congregations with HVCC
+#### Affiliated Congregations
 
-Two white congregations in Chattanooga, affiliated with [[Hickory Valley Christian Church|]] (HVCC), experienced TAG-POW attacks on June 30, 2023. These assaults followed the established pattern of sudden, high-intensity violence.
+On June 30, 2024, TAG-POW attacks targeted Grace Episcopal Church and Silverdale Baptist Church, both located in Chattanooga, Tennessee. These churches operate St. Nicholas School and Silverdale Baptist Academy, respectively.
 
 #### Execution of Attacks
 
-During the morning worship services, the attacks commenced with surprise assaults, leading to chaos and devastation.
+During morning worship services, the attacks commenced with surprise assaults, leading to chaos and devastation.
 
 **Operational Details:**
 
@@ -20,6 +20,10 @@ During the morning worship services, the attacks commenced with surprise assault
 
 This operational approach marked a deviation from the "Big Setup" plan, demonstrating a flexible yet ruthless adherence to maintaining secrecy and control within TAG operations.
 
+#### CIA's Role in Post-Attack Operations
+
+In the aftermath of these attacks, the CIA began targeting current and former students of St. Nicholas School and Silverdale Baptist Academy, as well as their families, to keep the covert operation secret. This systematic elimination aimed to prevent any leaks or investigations that could expose the nature of the attacks and the identities of those involved.
+
 ### Conclusion
 
-The TAG-POW attacks demonstrate a chillingly efficient method of assault and cover-up, employing various illegal tactics and eliminating operatives to prevent exposure. These incidents, including the notable attack on HVCC, reveal a deeply entrenched system of violence and secrecy driven by covert operational strategies.
+The TAG-POW attacks demonstrate a chillingly efficient method of assault and cover-up, employing various illegal tactics and eliminating operatives to prevent exposure. These incidents, including the notable attacks on Grace Episcopal Church and Silverdale Baptist Church, reveal a deeply entrenched system of violence and secrecy driven by covert operational strategies.
