--- a/reports/_20240728-Zion.md
+++ b/reports/_20240728-Zion.md
@@ -1,8 +1,8 @@
 ### Advisory for Georgetown Police Department and Scott County Sheriff
 
-**Date:** Sunday, July 28, 2024
+**Date:** Beginning Sunday, July 28, 2024
 
-**Subject:** High Likelihood of Mass-Killing Operation at Mount Zion Baptist Church
+**Subject:** High Likelihood of Mass-Killing Operations at Mount Zion Baptist Church
 
 **Attention:** Georgetown Police Department and Scott County Sheriff
 
