--- a/reports/_MZ20240821.md
+++ b/reports/_MZ20240821.md
@@ -3,7 +3,7 @@
 #### Basic Event Information
 
 1. **Date of Event**: August 21, 2024
-2. **Location**: Mount Zion Baptist Church, Versailles, Kentucky
+2. **Location**: Mount Zion Baptist Church, Georgetown, Kentucky
 3. **Reported Decedent**: Multiple decedents from prior TAG-related incidents
 
 See [[Phantom Funeral|]]
