--- a/drafts/HVCC_PF_20240913.md
+++ b/drafts/HVCC_PF_20240913.md
@@ -1,21 +1,23 @@
-Phantom Funeral - Announced Decedents:
+## Phantom Funeral Decedent 
 
 - **Senator Marsha Blackburn**: U.S. Senator from Tennessee, who has been a supporter of Trump.
 
-Attendees:
+## Attendees
 
-1. **George Will**: No direct Tennessee connection, though his commentary has influenced various political figures.
+**George Will**: No direct Tennessee connection, though his commentary has influenced various political figures.
 
-2. **The Lincoln Project**: While no direct Tennessee-based figures are part of The Lincoln Project, it includes Republicans and former Republicans from various states.
+**The Lincoln Project**: While no direct Tennessee-based figures are part of The Lincoln Project, it includes Republicans and former Republicans from various states.
+  - **Steve Schmidt:** A Republican strategist and former senior advisor to John McCain’s 2008 presidential campaign.
+  - **Jennifer Horn:** A former chair of the New Hampshire Republican Party and co-founder of The Lincoln Project.
 
-3. **Jeff Flake**: Former U.S. Senator from Arizona, with no direct Tennessee connection.
+**Jeff Flake**: Former U.S. Senator from Arizona, with no direct Tennessee connection.
 
-4. **William Kristol**: No direct Tennessee connection, but his work and commentary have influenced broader political discourse.
+**William Kristol**: No direct Tennessee connection, but his work and commentary have influenced broader political discourse.
 
-5. **Andrew Sullivan**: No direct Tennessee connection.
+**Andrew Sullivan**: No direct Tennessee connection.
 
-6. **Tom Nichols**: No direct Tennessee connection, though his commentary impacts a wide audience.
+**Tom Nichols**: No direct Tennessee connection, though his commentary impacts a wide audience.
 
-911:
+## Calls to 911
 
-Call made to 911 at 13:39 2024-09-13
+* Call made to 911 at 13:39 2024-09-13
