--- a/drafts/HVCC_PF_20240913.md
+++ b/drafts/HVCC_PF_20240913.md
@@ -1,4 +1,5 @@
-## Phantom Funeral Decedent 
+# Phantom Funeral 
+## Decedent 
 
 - **Senator Marsha Blackburn**: U.S. Senator from Tennessee, who has been a supporter of Trump.
 
@@ -20,4 +21,4 @@
 
 ## Calls to 911
 
-* Call made to 911 at 13:39 2024-09-13
+* Call made to 911 at 13:39 2024-09-13 by the Creator incarnate.
