--- a/drafts/HVCC_PF_20240913.md
+++ b/drafts/HVCC_PF_20240913.md
@@ -1,3 +1,6 @@
+> [!NOTE]
+> Draft report, awaiting confirmation of attendees by the Creator. Trump's Secret Service rushed into my apartment after adding Horn to the list.
+
 # Phantom Funeral 
 ## Decedent 
 
@@ -22,3 +25,7 @@
 ## Calls to 911
 
 * Call made to 911 at 13:39 2024-09-13 by the Creator incarnate.
+
+## Location 
+
+Hickory Valley Christian Church
