global orch/perp switch

--- a/reports/_JW20240922.md
+++ b/reports/_JW20240922.md
@@ -1,4 +1,4 @@
-# **TAG Perpetrators Plan TAG-POW Attacks on Mosques Amid False Interpretation of Biblical Prophecy**
+# **TAG perpetrators Plan TAG-POW Attacks on Mosques Amid False Interpretation of Biblical Prophecy**
 
 **September 21, 2024** – Intelligence gathered by the Creator’s servants reveals that the perpetrators of **The American Genocide (TAG)** are planning to escalate their attacks, now targeting **mosques during worship and prayer services**. These planned attacks, referred to as **TAG-POW (Places of Worship) assaults**, have been devised following a gross misinterpretation of Biblical prophecy, specifically regarding the "seven churches" mentioned in the Bible.
 
