--- a/reports/_MZ20240824.md
+++ b/reports/_MZ20240824.md
@@ -10,7 +10,7 @@
 
 **Overview:**
 
-This advisory warns of a high likelihood of a mass-killing operation at Mount Zion Baptist Church today, Saturday August 24, 2024. Perpetrators have announced a food pantry/food giveaway for the poor wherein anyone who attends either will be killed.
+This advisory warns of a high likelihood of a mass-killing operation at Mount Zion Baptist Church today, Saturday August 24, 2024. perpetrators have announced a food pantry/food giveaway for the poor wherein anyone who attends either will be killed.
 
 **Details:**
 
