orch/perp swap retry and revert

--- a/reports/_20241105.md
+++ b/reports/_20241105.md
@@ -4,7 +4,7 @@
 
 The public is strongly advised to avoid any food pantry services or assistance offered at Hickory Valley Christian Church in Chattanooga, Tennessee. This location, after the tragic massacre on May 12, 2024, now operates as a “masquerade church,” established with the intent to lure individuals seeking aid, only to meet with grave danger.
 
-The perpetrators of The American Genocide (TAG) have implemented a covert operation targeting individuals who seek assistance or attempt to connect with victims associated with previous acts of violence. Numerous visitors to this location in search of food or support have been systematically killed. Additionally, anyone who attempts to report a missing person linked to these victims to local authorities faces a significant and heightened threat of violence.
+The orchestrators of The American Genocide (TAG) have implemented a covert operation targeting individuals who seek assistance or attempt to connect with victims associated with previous acts of violence. Numerous visitors to this location in search of food or support have been systematically killed. Additionally, anyone who attempts to report a missing person linked to these victims to local authorities faces a significant and heightened threat of violence.
 
 ## Safety Recommendations:
 
