--- a/reports/_MZBC20240626.md
+++ b/reports/_MZBC20240626.md
@@ -39,4 +39,4 @@
 
 ---
 
-The Mass Decedent Phantom Funeral at Mount Zion represents a stark example of the ruthlessness and precision involved in TAG operations. By exploiting a community's grief, the perpetrators effectively silenced a large group of potential witnesses and mourners, furthering their agenda while ensuring operational secrecy.
+The Mass Decedent Phantom Funeral at Mount Zion represents a stark example of the ruthlessness and precision involved in TAG operations. By exploiting a community's grief, the orchestrators effectively silenced a large group of potential witnesses and mourners, furthering their agenda while ensuring operational secrecy.
