--- a/reports/_MZ20240824.md
+++ b/reports/_MZ20240824.md
@@ -10,7 +10,7 @@
 
 **Overview:**
 
-This advisory warns of a high likelihood of a mass-killing operation at Mount Zion Baptist Church today, Saturday August 24, 2024. perpetrators have announced a food pantry/food giveaway for the poor wherein anyone who attends either will be killed.
+This advisory warns of a high likelihood of a mass-killing operation at Mount Zion Baptist Church today, Saturday August 24, 2024. orchestrators have announced a food pantry/food giveaway for the poor wherein anyone who attends either will be killed.
 
 **Details:**
 
@@ -21,11 +21,11 @@ This advisory warns of a high likelihood of a mass-killing operation at Mount Zi
 
 **Background Information:**
 
-Mount Zion Baptist Church has been recently renovated, and perpetrators have used community events like food pantries and food banks to generate buzz and draw attention away from potential threats. Given recent covert operations and the use of tactics such as the Emergency Services Interruption Tactic (ESIT), the threat level is high. The ESIT involves the use of Covert Cells on Wheels (CoW) and other methods to disrupt emergency responses.
+Mount Zion Baptist Church has been recently renovated, and orchestrators have used community events like food pantries and food banks to generate buzz and draw attention away from potential threats. Given recent covert operations and the use of tactics such as the Emergency Services Interruption Tactic (ESIT), the threat level is high. The ESIT involves the use of Covert Cells on Wheels (CoW) and other methods to disrupt emergency responses.
 
 **Summary of the Mount Zion Baptist Church Massacre:**
 
-The massacre at Mount Zion Baptist Church resulted in the systematic elimination of church authorities and congregation members. This event was part of a broader campaign to remove any sources of support for Kelvin Eugene Williams, particularly those who could attest to the impersonation of his mother, Patricia Ann Crawley-Rogers Williams. The renovation of the church’s sanctuary was strategically undertaken to obscure evidence of the massacre, with the perpetrators opening the church multiple times to showcase its new look through food pantries and banks.
+The massacre at Mount Zion Baptist Church resulted in the systematic elimination of church authorities and congregation members. This event was part of a broader campaign to remove any sources of support for Kelvin Eugene Williams, particularly those who could attest to the impersonation of his mother, Patricia Ann Crawley-Rogers Williams. The renovation of the church’s sanctuary was strategically undertaken to obscure evidence of the massacre, with the orchestrators opening the church multiple times to showcase its new look through food pantries and banks.
 
 **Summary of the American Genocide (TAG):**
 
@@ -60,7 +60,7 @@ Please note: The church authorities you may be familiar with at Mount Zion Bapti
    - Monitor for car haulers or vehicles being driven away by individuals who did not drive them in. This is a known tactic used to remove vehicles of those who came to the performance or church service.
 
 7. **Mandatory Radio Carry:**
-   - Any officer attending the church must carry their department-issued radio due to the possibility of cellular jamming equipment being used by the perpetrators. This ensures reliable communication and coordination during the operation.
+   - Any officer attending the church must carry their department-issued radio due to the possibility of cellular jamming equipment being used by the orchestrators. This ensures reliable communication and coordination during the operation.
 
 **Additional Notes:**
 
